[package]
name = "binance_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://web.telegram.org/#/im?p=@BotFather
# Should include "macros" to make it work
# https://github.com/teloxide/teloxide/blob/dev/examples/dialogue_bot/Cargo.toml
teloxide = { version = "0.4", features = ["frunk", "macros", "auto-send"] } 

log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
